--- a/Prime_number_or_not/index.html
+++ b/Prime_number_or_not/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Given Number is Prime Number or Not</h1>
     <script src="script.js"></script>
 </body>
 </html>
