All codings No:1.

--- a/z-practice/index.html
+++ b/z-practice/index.html
@@ -8,70 +8,18 @@
     <link rel="stylesheet" href="../git-response/css/reset.css">
 </head>
 <body>
-    <script src="script.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <h1>All Program In Single File No:1</h1>
+    <!-- Changing Color of <h1> by getting the color from from User -->
+<div>
+    <h1 id="head">Arun Kumar</h1>
+    <input type="text" name="" id="col">
+    <button id="tri">Click</button>
+</div>
+<!-- Generating Random Color Using rgb by clicking the button -->
+<div>
+    <button id="but">Click</button>
+</div>
+ <script src="script.js"></script>
 </body>
 
 </html>
