--- a/x_practice/index.html
+++ b/x_practice/index.html
@@ -12,6 +12,16 @@
         <input type="date" id="dob">
         <button id="trigger">Calculate Age</button>
     </div>
+    <br>
+    <br>
+
+    <div>
+        <input type="text"id="numb">
+        <span id="result"></span>
+        <br>
+        <br>
+        <button id="check">Check</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
