--- a/task/index.html
+++ b/task/index.html
@@ -7,7 +7,15 @@
     <title>Coding Task</title>
 </head>
 <body>
-    
+	
+    <div class="container">
+            <input type="text" id="inpt">
+            <button id="trigger">Add</button>
+			
+			<div id="list"></div>
+        
+    </div>
     <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
